--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -1,6 +1,7 @@
 name: GitHub CI
 on:
   pull_request:
+    types: [opened, reopened, synchronize, edited, closed]
   workflow_dispatch: # or workflow_call
     inputs:
       mechanical-version:
@@ -58,7 +59,7 @@ jobs:
       contents: write
       pull-requests: write
     steps:
-      - uses: ansys/actions/doc-deploy-changelog@v8
+      - uses: ansys/actions/doc-deploy-changelog@v10
         with:
           token: ${{ secrets.PYANSYS_CI_BOT_TOKEN }}
           bot-user: ${{ secrets.PYANSYS_CI_BOT_USERNAME }}
@@ -69,7 +70,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: "PyAnsys code style checks"
-        uses: ansys/actions/code-style@v8
+        uses: ansys/actions/code-style@v10
         with:
           python-version: ${{ env.MAIN_PYTHON_VERSION }}
 
@@ -78,7 +79,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: "PyAnsys documentation style checks"
-        uses: ansys/actions/doc-style@v8
+        uses: ansys/actions/doc-style@v10
         with:
           vale-config: doc/.vale.ini
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -127,22 +128,28 @@ jobs:
     outputs:
       stubs-matrix: ${{ steps.set-matrix.outputs.stubs_matrix }}
       test-matrix: ${{ steps.set-matrix.outputs.test_matrix }}
+      doc-build-matrix: ${{ steps.set-matrix.outputs.doc_build_matrix }}
     steps:
       - id: set-matrix
         run: |
           # Run all stable mechanical versions release tags
-          # For pull requests and merges use latest stable version (251)
+          # For pull requests and merges use latest stable version (252)
           if ${{ github.event_name == 'workflow_dispatch' }}; then
             echo "stubs_matrix<<DELIMITER" >> ${GITHUB_OUTPUT}
             echo "{\"mechanical\":[{\"image\":\"${{ needs.set-mechanical-versions.outputs.image }}\",\"version\":\"${{ needs.set-mechanical-versions.outputs.version }}\"}],\"python-version\":${{ needs.set-mechanical-versions.outputs.python-version }}}" >> ${GITHUB_OUTPUT}
             echo "DELIMITER" >> ${GITHUB_OUTPUT}
+
+            echo "doc_build_matrix={\"python-version\":[\'${{ inputs.python-version }}\']}" >> $GITHUB_OUTPUT
           else
             echo "stubs_matrix<<DELIMITER" >> ${GITHUB_OUTPUT}
             echo "{\"mechanical\":[{\"image\":\"24.2.0\",\"version\":\"242\"},{\"image\":\"25.1.0\",\"version\":\"251\"},{\"image\":\"25.2.0\",\"version\":\"252\"}],\"python-version\":${{ needs.set-mechanical-versions.outputs.python-version }}}" >> ${GITHUB_OUTPUT}
             echo "DELIMITER" >> ${GITHUB_OUTPUT}
+
+            echo "doc_build_matrix={\"python-version\":['${{ env.MAIN_PYTHON_VERSION }}']}" >> $GITHUB_OUTPUT
           fi
 
           echo "test_matrix={\"os\":['ubuntu-latest', 'windows-latest'],\"python-version\":${{ needs.set-mechanical-versions.outputs.python-version }}}" >> $GITHUB_OUTPUT
+
 
   gen-stubs:
     name: Generate Mechanical stubs
@@ -282,11 +289,11 @@ jobs:
 
   doc-build:
     name: Make html and markdown documentation
-    needs: [smoke-tests]
+    if: github.event.action != 'closed'
+    needs: [smoke-tests, config-matrix]
     runs-on: ubuntu-latest
     strategy:
-      matrix:
-        python-version: ['3.10']
+      matrix: ${{ fromJSON(needs.config-matrix.outputs.doc-build-matrix) }}
     steps:
     - name: "Install Git and clone project"
       uses: actions/checkout@v4
@@ -366,7 +373,9 @@ jobs:
         python scripts/05-remove-link-in-heading.py
 
     - name: "Upload toc.yml"
-      if: matrix.python-version == env.MAIN_PYTHON_VERSION
+      if: |
+        github.event_name == 'workflow_dispatch' ||
+        matrix.python-version == env.MAIN_PYTHON_VERSION
       uses: actions/upload-artifact@v4
       with:
         name: toc-file
@@ -374,7 +383,9 @@ jobs:
 
     - name: "Upload Markdown documentation"
       uses: actions/upload-artifact@v4
-      if: matrix.python-version == env.MAIN_PYTHON_VERSION
+      if: |
+        github.event_name == 'workflow_dispatch' ||
+        matrix.python-version == env.MAIN_PYTHON_VERSION
       with:
         name: documentation-md
         path: doc/_build/markdown
@@ -382,19 +393,37 @@ jobs:
 
     - name: "Upload HTML documentation"
       uses: actions/upload-artifact@v4
-      if: matrix.python-version == env.MAIN_PYTHON_VERSION
+      if: |
+        github.event_name == 'workflow_dispatch' ||
+        matrix.python-version == env.MAIN_PYTHON_VERSION
       with:
         name: documentation-html
         path: doc/_build/html
         retention-days: 7
 
     - name: Upload PDF Documentation
-      if: matrix.python-version == env.MAIN_PYTHON_VERSION
+      if: |
+        github.event_name == 'workflow_dispatch' ||
+        matrix.python-version == env.MAIN_PYTHON_VERSION
       uses: actions/upload-artifact@v4
       with:
         name: documentation-pdf
         path: doc/_build/latex/doc.pdf
         retention-days: 7
+
+  doc-deploy-pr:
+    name: "Deploy PR documentation"
+    runs-on: ubuntu-latest
+    needs: [doc-build]
+    if: always() && (needs.doc-build.result == 'success' || needs.doc-build.result == 'skipped')
+    steps:
+      - uses: ansys/actions/doc-deploy-pr@v10
+        with:
+          cname: ${{ env.DOCUMENTATION_CNAME }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          bot-user: ${{ secrets.PYANSYS_CI_BOT_USERNAME }}
+          bot-email: ${{ secrets.PYANSYS_CI_BOT_EMAIL }}
+          maximum-pr-doc-deployments: 10
 
   build-library:
     name: Build library
@@ -405,10 +434,12 @@ jobs:
       uses: actions/checkout@v4
 
     - name: "Set up Python"
-      uses: ansys/actions/_setup-python@v8
+      uses: ansys/actions/_setup-python@v10
       with:
         python-version: ${{ env.MAIN_PYTHON_VERSION }}
         use-cache: false
+        provision-uv: false
+        prune-uv-cache: false
 
     - name: "Download stubs"
       uses: ./.github/workflows/setup-stubs/
@@ -448,14 +479,22 @@ jobs:
       contents: write
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
     steps:
-      - name: "Release to the public PyPI repository"
-        uses: ansys/actions/release-pypi-public@v8
+      - name: "Download the library artifacts from build-library step"
+        uses: actions/download-artifact@cc203385981b70ca67e1cc392babf9cc229d5806 # v4.1.9
         with:
-          library-name: ${{ env.PACKAGE_NAME }}
-          use-trusted-publisher: true
+          name: ${{ env.PACKAGE_NAME }}-artifacts
+          path: ${{ env.PACKAGE_NAME }}-artifacts
+
+      - name: "Upload artifacts to PyPI using trusted publisher"
+        uses: pypa/gh-action-pypi-publish@76f52bc884231f62b9a034ebfe128415bbaabdfc # v1.12.4
+        with:
+          repository-url: "https://upload.pypi.org/legacy/"
+          print-hash: true
+          packages-dir: ${{ env.PACKAGE_NAME }}-artifacts
+          skip-existing: false
 
       - name: "Release to GitHub"
-        uses: ansys/actions/release-github@v8
+        uses: ansys/actions/release-github@v10
         with:
           library-name: ${{ env.PACKAGE_NAME }}
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -467,11 +506,10 @@ jobs:
     needs: [doc-build]
     steps:
       - name: "Deploy development documentation"
-        uses: ansys/actions/doc-deploy-dev@v8
+        uses: ansys/actions/doc-deploy-dev@v10
         with:
           cname: ${{ env.DOCUMENTATION_CNAME }}
           token: ${{ secrets.GITHUB_TOKEN }}
-          doc-artifact-name: 'documentation-html'
           bot-user: ${{ secrets.PYANSYS_CI_BOT_USERNAME }}
           bot-email: ${{ secrets.PYANSYS_CI_BOT_EMAIL }}
 
@@ -482,10 +520,9 @@ jobs:
     needs: release
     steps:
       - name: "Deploy stable documentation"
-        uses: ansys/actions/doc-deploy-stable@v8
+        uses: ansys/actions/doc-deploy-stable@v10
         with:
           cname: ${{ env.DOCUMENTATION_CNAME }}
           token: ${{ secrets.GITHUB_TOKEN }}
-          doc-artifact-name: 'documentation-html'
           bot-user: ${{ secrets.PYANSYS_CI_BOT_USERNAME }}
           bot-email: ${{ secrets.PYANSYS_CI_BOT_EMAIL }}
