try except around missing files

--- a/.github/workflows/setup-stubs/action.yml
+++ b/.github/workflows/setup-stubs/action.yml
@@ -64,8 +64,11 @@ runs:
             if not os.path.exists(f"${{ inputs.package-path }}/v{version}"):
                 os.makedirs(f"${{ inputs.package-path }}/v{version}")
                 with open(f"${{ inputs.package-path }}/v{version}/__init__.py", "w") as f:
-                    f.write(f'"""Ansys Mechanical v{version} module."""\n')
-                    f.write(f'import ansys.mechanical.stubs.v{version}.Ansys as Ansys\n')
+                    f.write('''try:
+            """Ansys Mechanical v{version} module."""
+            import ansys.mechanical.stubs.v{version}.Ansys as Ansys\
+        except ModuleNotFoundError:  # pragma: no cover
+            pass  # type: ignore\n\n''')
 
     - name: Create __init__.py in ${{ inputs.package-path }}
       shell: python
