--- a/.github/workflows/setup-stubs/action.yml
+++ b/.github/workflows/setup-stubs/action.yml
@@ -64,11 +64,7 @@ runs:
             if not os.path.exists(f"${{ inputs.package-path }}/v{version}"):
                 os.makedirs(f"${{ inputs.package-path }}/v{version}")
                 with open(f"${{ inputs.package-path }}/v{version}/__init__.py", "w") as f:
-                    f.write('''try:
-                    """Ansys Mechanical v{version} module."""
-                    import ansys.mechanical.stubs.v{version}.Ansys as Ansys
-                except ModuleNotFoundError:  # pragma: no cover
-                    pass  # type: ignore\n\n''')
+                    f.write(f'"""Ansys Mechanical v{version} module."""\n')
 
     - name: Create __init__.py in ${{ inputs.package-path }}
       shell: python
