--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -405,7 +405,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [doc-build, config-matrix]
     strategy:
-      matrix: ${{ fromJSON(needs.config-matrix.outputs.doc-build-matrix) }}
+      matrix:
+        python-version: ${{ fromJSON(needs.config-matrix.outputs.doc-build-matrix).python-version }}
     steps:
       - name: "Install Git and clone project"
         uses: actions/checkout@v4
@@ -448,24 +449,24 @@ jobs:
       #   with:
       #     pattern: documentation-md-*
 
-  # doc-deploy-pr:
-  #   name: "Deploy PR documentation"
-  #   runs-on: ubuntu-latest
-  #   needs: [doc-build]
-  #   if: always() && (needs.doc-build.result == 'success' || needs.doc-build.result == 'skipped')
-  #   steps:
-  #     - uses: ansys/actions/doc-deploy-pr@v10
-  #       with:
-  #         cname: ${{ env.DOCUMENTATION_CNAME }}
-  #         token: ${{ secrets.GITHUB_TOKEN }}
-  #         bot-user: ${{ secrets.PYANSYS_CI_BOT_USERNAME }}
-  #         bot-email: ${{ secrets.PYANSYS_CI_BOT_EMAIL }}
-  #         maximum-pr-doc-deployments: 10
+  doc-deploy-pr:
+    name: "Deploy PR documentation"
+    runs-on: ubuntu-latest
+    needs: [combine-docs]
+    if: always() && (needs.doc-build.result == 'success' || needs.doc-build.result == 'skipped')
+    steps:
+      - uses: ansys/actions/doc-deploy-pr@v10
+        with:
+          cname: ${{ env.DOCUMENTATION_CNAME }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          bot-user: ${{ secrets.PYANSYS_CI_BOT_USERNAME }}
+          bot-email: ${{ secrets.PYANSYS_CI_BOT_EMAIL }}
+          maximum-pr-doc-deployments: 10
 
   build-library:
     name: Build library
     runs-on: ubuntu-latest
-    needs: [doc-build]
+    needs: [combine-docs]
     steps:
     - name: "Install Git and clone project"
       uses: actions/checkout@v4
@@ -540,7 +541,7 @@ jobs:
     name: "Deploy development documentation"
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-    needs: [doc-build]
+    needs: [combine-docs]
     steps:
       - name: "Deploy development documentation"
         uses: ansys/actions/doc-deploy-dev@v10
