--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -408,6 +408,10 @@ jobs:
       - name: "Install Git and clone project"
         uses: actions/checkout@v4
 
+      - name: "Install project & doc dependencies"
+        run: |
+          python -m pip install -e .[doc]
+
       - name: "Download all HTML documentation"
         uses: actions/download-artifact@v4
         with:
