--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -2,7 +2,7 @@ name: GitHub CI
 on:
   pull_request:
     types: [opened, reopened, synchronize, edited, closed]
-  workflow_dispatch: # or workflow_call
+  workflow_dispatch:
     inputs:
       mechanical-version:
         description: "Create stubs for the following Mechanical version:"
@@ -139,13 +139,13 @@ jobs:
             echo "{\"mechanical\":[{\"image\":\"${{ needs.set-mechanical-versions.outputs.image }}\",\"version\":\"${{ needs.set-mechanical-versions.outputs.version }}\"}],\"python-version\":${{ needs.set-mechanical-versions.outputs.python-version }}}" >> ${GITHUB_OUTPUT}
             echo "DELIMITER" >> ${GITHUB_OUTPUT}
 
-            echo "doc_build_matrix={\"python-version\":[\'${{ inputs.python-version }}\']}" >> $GITHUB_OUTPUT
+            echo "doc_build_matrix={\"mechanical-revn\":[${{ needs.set-mechanical-versions.outputs.version }}],\"python-version\":[${{ inputs.python-version }}]}" >> $GITHUB_OUTPUT
           else
             echo "stubs_matrix<<DELIMITER" >> ${GITHUB_OUTPUT}
-            echo "{\"mechanical\":[{\"image\":\"24.2.0\",\"version\":\"242\"},{\"image\":\"25.1.0\",\"version\":\"251\"},{\"image\":\"25.2.0\",\"version\":\"252\"}],\"python-version\":${{ needs.set-mechanical-versions.outputs.python-version }}}" >> ${GITHUB_OUTPUT}
+            echo "{\"mechanical\":[{\"image\":\"24.1.0\",\"version\":\"241\"},{\"image\":\"24.2.0\",\"version\":\"242\"},{\"image\":\"25.1.0\",\"version\":\"251\"},{\"image\":\"25.2.0\",\"version\":\"252\"}],\"python-version\":${{ needs.set-mechanical-versions.outputs.python-version }}}" >> ${GITHUB_OUTPUT}
             echo "DELIMITER" >> ${GITHUB_OUTPUT}
 
-            echo "doc_build_matrix={\"python-version\":['${{ env.MAIN_PYTHON_VERSION }}']}" >> $GITHUB_OUTPUT
+            echo "doc_build_matrix={\"mechanical-revn\":['241', '242', '251', '252'],\"python-version\":[${{ env.MAIN_PYTHON_VERSION }}]}" >> $GITHUB_OUTPUT
           fi
 
           echo "test_matrix={\"os\":['ubuntu-latest', 'windows-latest'],\"python-version\":${{ needs.set-mechanical-versions.outputs.python-version }}}" >> $GITHUB_OUTPUT
@@ -301,7 +301,7 @@ jobs:
     - name: "Download stubs"
       uses: ./.github/workflows/setup-stubs/
       with:
-        folder-pattern: "v[0-9][0-9][0-9]-${{ matrix.python-version }}"
+        folder-pattern: "v${{ matrix.mechanical-revn }}-${{ matrix.python-version }}"
         package-path: "${{ env.PACKAGE_PATH }}"
         python-version: ${{ matrix.python-version }}
 
@@ -312,13 +312,12 @@ jobs:
     - name: "Generate HTML documentation"
       run: |
         make -C doc html
-        make -C doc pdf
 
-    - name: "Upload original Sphinx HTML documentation"
+    - name: "Upload version Sphinx HTML documentation"
       uses: actions/upload-artifact@v4
       if: matrix.python-version == env.MAIN_PYTHON_VERSION
       with:
-        name: original-documentation-html
+        name: documentation-html-v${{ matrix.mechanical-revn }}
         path: doc/_build/html
         retention-days: 7
 
@@ -326,96 +325,175 @@ jobs:
       run: |
         make -C doc markdown
 
-    - name: "Upload original markdown documentation"
+    - name: "Upload version markdown documentation"
       uses: actions/upload-artifact@v4
       if: matrix.python-version == env.MAIN_PYTHON_VERSION
       with:
-        name: original-documentation-md
+        name: documentation-md-v${{ matrix.mechanical-revn }}
         path: doc/_build/markdown
         retention-days: 7
 
-    - name: "Replace Windows apostrophes with single quotes"
-      run: |
-        python scripts/replace-windows-apostrophes.py
+  combine-docs:
+    name: Combine documentation
+    runs-on: ubuntu-latest
+    needs: [doc-build, config-matrix]
+    strategy:
+      matrix:
+        python-version: ${{ fromJSON(needs.config-matrix.outputs.doc-build-matrix).python-version }}
+    steps:
+      - name: "Install Git and clone project"
+        uses: actions/checkout@v4
 
-    - name: "Make all hrefs local in Markdown"
-      run: |
-        python scripts/fix-href-md.py
+      - name: "Download all HTML documentation"
+        uses: actions/download-artifact@v4
+        with:
+          pattern: documentation-html-v*
 
-    - name: "Make all hrefs local in HTML"
-      run: |
-        python scripts/fix-href-html.py
+      - name: "Download all Markdown documentation"
+        uses: actions/download-artifact@v4
+        with:
+          pattern: documentation-md-v*
 
-    - name: "Clean ID in first row"
-      run: |
-        python scripts/01-clean-id.py
+      - name: "Combine HTML and Markdown documentation"
+        run: |
+          combine_documentation() {
+            combined_folder_name=$1
+            combined_folder_path=$(pwd)/$combined_folder_name
+            version_folders=($(find . -maxdepth 1 -type d -name "$combined_folder_name-v[0-9][0-9][0-9]"))
 
-    - name: "Clean empty rows"
-      run: |
-        python scripts/02-clean-empty-row.py
+            for folder in "${version_folders[@]}"; do
+              if [ -d "$combined_folder_path" ]; then
+                  folder_version="${folder##*-}"
+                  version_path="api/ansys/mechanical/stubs/${folder_version}"
+                  cp -r $folder/$version_path/* $combined_folder_path/$version_path
+              else
+                  mkdir -p "$combined_folder_path"
+                  echo "$combined_folder_path folder created."
+                  cp -r "$folder/"* "$combined_folder_path"
+              fi
+            done
+          }
 
-    - name: "Create table of contents"
-      run: |
-        python scripts/03-create-toc-from-html-mechanical.py
+          combine_documentation "documentation-html"
+          combine_documentation "documentation-md"
 
-    - name: "Fix paths in toc.yml"
-      shell: bash
-      run: |
-        # Remove doc/_build/html from paths in toc.yml file
-        sed -i -e 's;doc/_build/html/;;g' output/toc.yml
+      - name: "Upload HTML documentation"
+        uses: actions/upload-artifact@v4
+        if: |
+          github.event_name == 'workflow_dispatch' ||
+          matrix.python-version == env.MAIN_PYTHON_VERSION
+        with:
+          name: combined-documentation-html
+          path: documentation-html
+          retention-days: 7
 
-    - name: "Add header to tables"
-      run: |
-        python scripts/04-add-header-to-tables.py
+      - name: "Upload Markdown documentation"
+        uses: actions/upload-artifact@v4
+        if: |
+          github.event_name == 'workflow_dispatch' ||
+          matrix.python-version == env.MAIN_PYTHON_VERSION
+        with:
+          name: combined-documentation-md
+          path: documentation-md
+          retention-days: 7
 
-    - name: "Remove links in heading"
-      run: |
-        python scripts/05-remove-link-in-heading.py
+  clean-docs:
+    name: Clean HTML and Markdown documentation
+    runs-on: ubuntu-latest
+    needs: [combine-docs, config-matrix]
+    strategy:
+      matrix:
+        python-version: ${{ fromJSON(needs.config-matrix.outputs.doc-build-matrix).python-version }}
+    steps:
+      - name: "Install Git and clone project"
+        uses: actions/checkout@v4
 
-    - name: "Upload toc.yml"
-      if: |
-        github.event_name == 'workflow_dispatch' ||
-        matrix.python-version == env.MAIN_PYTHON_VERSION
-      uses: actions/upload-artifact@v4
-      with:
-        name: toc-file
-        path: output/
+      - name: "Install project & doc dependencies"
+        run: |
+          python -m pip install -e .[doc]
 
-    - name: "Upload Markdown documentation"
-      uses: actions/upload-artifact@v4
-      if: |
-        github.event_name == 'workflow_dispatch' ||
-        matrix.python-version == env.MAIN_PYTHON_VERSION
-      with:
-        name: documentation-md
-        path: doc/_build/markdown
-        retention-days: 7
+      - name: "Download all HTML documentation"
+        uses: actions/download-artifact@v4
+        with:
+          pattern: combined-documentation-html
 
-    - name: "Upload HTML documentation"
-      uses: actions/upload-artifact@v4
-      if: |
-        github.event_name == 'workflow_dispatch' ||
-        matrix.python-version == env.MAIN_PYTHON_VERSION
-      with:
-        name: documentation-html
-        path: doc/_build/html
-        retention-days: 7
+      - name: "Download all Markdown documentation"
+        uses: actions/download-artifact@v4
+        with:
+          pattern: combined-documentation-md
 
-    - name: Upload PDF Documentation
-      if: |
-        github.event_name == 'workflow_dispatch' ||
-        matrix.python-version == env.MAIN_PYTHON_VERSION
-      uses: actions/upload-artifact@v4
-      with:
-        name: documentation-pdf
-        path: doc/_build/latex/doc.pdf
-        retention-days: 7
+      - name: "Replace Windows apostrophes with single quotes"
+        run: |
+          python scripts/replace-windows-apostrophes.py --html_api_folder combined-documentation-html/api --markdown_api_folder combined-documentation-md/api
+
+      - name: "Markdown: Make all hrefs local"
+        run: |
+          python scripts/fix-href-md.py --api_folder combined-documentation-md/api
+
+      - name: "HTML: Make all hrefs local"
+        run: |
+          python scripts/fix-href-html.py --api_folder combined-documentation-html/api
+
+      - name: "Markdown: Clean ID in first row"
+        run: |
+          python scripts/01-clean-id.py --input_folder combined-documentation-md
+
+      - name: "Markdown: Clean empty rows"
+        run: |
+          python scripts/02-clean-empty-row.py --input_folder combined-documentation-md
+
+      - name: "Create table of contents"
+        run: |
+          python scripts/03-create-toc-from-html-mechanical.py --api_folder combined-documentation-html/api
+
+      - name: "Fix paths in toc.yml"
+        shell: bash
+        run: |
+          # Remove doc/_build/html from paths in toc.yml file
+          sed -i -e 's;doc/_build/html/;;g' output/toc.yml
+
+      - name: "Upload toc.yml file"
+        if: |
+          github.event_name == 'workflow_dispatch' ||
+          matrix.python-version == env.MAIN_PYTHON_VERSION
+        uses: actions/upload-artifact@v4
+        with:
+          name: toc-file
+          path: output/
+
+      - name: "Markdown: Add header to tables"
+        run: |
+          python scripts/04-add-header-to-tables.py --input_folder combined-documentation-md
+
+      - name: "Markdown: Remove links in heading"
+        run: |
+          python scripts/05-remove-link-in-heading.py --input_folder combined-documentation-md
+
+      - name: "Upload HTML documentation"
+        uses: actions/upload-artifact@v4
+        if: |
+          github.event_name == 'workflow_dispatch' ||
+          matrix.python-version == env.MAIN_PYTHON_VERSION
+        with:
+          name: documentation-html
+          path: combined-documentation-html
+          retention-days: 7
+
+      - name: "Upload Markdown documentation"
+        uses: actions/upload-artifact@v4
+        if: |
+          github.event_name == 'workflow_dispatch' ||
+          matrix.python-version == env.MAIN_PYTHON_VERSION
+        with:
+          name: documentation-md
+          path: combined-documentation-md
+          retention-days: 7
 
   doc-deploy-pr:
     name: "Deploy PR documentation"
     runs-on: ubuntu-latest
-    needs: [doc-build]
-    if: always() && (needs.doc-build.result == 'success' || needs.doc-build.result == 'skipped')
+    needs: [clean-docs]
+    if: always() && (needs.clean-docs.result == 'success' || needs.clean-docs.result == 'skipped')
     steps:
       - uses: ansys/actions/doc-deploy-pr@v10
         with:
@@ -428,7 +506,7 @@ jobs:
   build-library:
     name: Build library
     runs-on: ubuntu-latest
-    needs: [doc-build]
+    needs: [clean-docs]
     steps:
     - name: "Install Git and clone project"
       uses: actions/checkout@v4
@@ -503,7 +581,7 @@ jobs:
     name: "Deploy development documentation"
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-    needs: [doc-build]
+    needs: [clean-docs]
     steps:
       - name: "Deploy development documentation"
         uses: ansys/actions/doc-deploy-dev@v10
