--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -169,23 +169,23 @@ jobs:
           AWP_ROOTDV_DEV: /install/ansys_inc/v${{ matrix.mechanical.version }}
           ANSYSCL${{ matrix.mechanical.version }}_DIR: /install/ansys_inc/v${{ matrix.mechanical.version }}/licensingclient
         run: |
-          apt update && apt upgrade -y
+          apt update
           apt install --reinstall ca-certificates
           apt install software-properties-common -y
           add-apt-repository ppa:deadsnakes/ppa -y
-          apt install python${{ matrix.python-version }} -y
-          ln -s /usr/bin/python${{ matrix.python-version }} /usr/bin/python
-          apt install python${{ matrix.python-version }}-venv -y
-          apt install -y lsb-release mono-complete make git zip
+          # apt install python${{ matrix.python-version }} -y
+          # ln -s /usr/bin/python${{ matrix.python-version }} /usr/bin/python
+          # apt install python${{ matrix.python-version }}-venv -y
+          # apt install -y lsb-release mono-complete make git zip
 
-          python -m ensurepip --default-pip
-          python -m pip install --upgrade pip
-          python --version
-          python -m pip --version
+          # python -m ensurepip --default-pip
+          # python -m pip install --upgrade pip
+          # python --version
+          # python -m pip --version
 
-          python -m pip install -e .[build,doc]
-          python -m pip install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org pip setuptools
-          python -m pip install --upgrade pip flit pytz tzdata ansys-pythonnet
+          # python -m pip install -e .[build,doc]
+          # python -m pip install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org pip setuptools
+          # python -m pip install --upgrade pip flit pytz tzdata ansys-pythonnet
 
       - name: "Generate the Mechanical stub files"
         env:
