--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -173,7 +173,7 @@ jobs:
           apt install --reinstall ca-certificates
           apt install software-properties-common -y
           add-apt-repository ppa:deadsnakes/ppa -y
-          # apt install python${{ matrix.python-version }} -y
+          apt install python${{ matrix.python-version }} -y
           # ln -s /usr/bin/python${{ matrix.python-version }} /usr/bin/python
           # apt install python${{ matrix.python-version }}-venv -y
           # apt install -y lsb-release mono-complete make git zip
