--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -176,7 +176,7 @@ jobs:
           apt install python${{ matrix.python-version }} -y
           ln -s /usr/bin/python${{ matrix.python-version }} /usr/bin/python
           apt install python${{ matrix.python-version }}-venv -y
-          # apt install -y lsb-release mono-complete make git zip
+          apt install -y lsb-release mono-complete make git zip
 
           # python -m ensurepip --default-pip
           # python -m pip install --upgrade pip
