--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -169,13 +169,21 @@ jobs:
           AWP_ROOTDV_DEV: /install/ansys_inc/v${{ matrix.mechanical.version }}
           ANSYSCL${{ matrix.mechanical.version }}_DIR: /install/ansys_inc/v${{ matrix.mechanical.version }}/licensingclient
         run: |
+          echo "apt update\n\n"
           apt update
+          echo "reinstall ca-certificates\n\n"
           apt install --reinstall ca-certificates
+          echo "install software-properties-common\n\n"
           apt install software-properties-common -y
+          echo "add apt repository\n\n"
           add-apt-repository ppa:deadsnakes/ppa -y
+          echo "apt install python${{ matrix.python-version }}\n\n"
           apt install python${{ matrix.python-version }} -y
+          echo "link python\n\n"
           ln -s /usr/bin/python${{ matrix.python-version }} /usr/bin/python
+          echo "apt install python${{ matrix.python-version }}-venv\n\n"
           apt install python${{ matrix.python-version }}-venv -y
+          echo "apt install lsb-release and more\n\n"
           apt install -y lsb-release mono-complete make git zip
 
           python -m ensurepip --default-pip
