--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -164,14 +164,6 @@ jobs:
       - name: "Install Git and clone project"
         uses: actions/checkout@v5
 
-      - name: "Set up Python"
-        env:
-          AWP_ROOTDV_DEV: /install/ansys_inc/v${{ matrix.mechanical.version }}
-          ANSYSCL${{ matrix.mechanical.version }}_DIR: /install/ansys_inc/v${{ matrix.mechanical.version }}/licensingclient
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-
       - name: "Install dependencies"
         env:
           AWP_ROOTDV_DEV: /install/ansys_inc/v${{ matrix.mechanical.version }}
@@ -184,41 +176,36 @@ jobs:
           # echo "install software-properties-common\n\n"
           # apt install software-properties-common -y
 
+          # echo "add deadsnakes ppa\n\n"
+          # add-apt-repository ppa:deadsnakes/ppa -y
+
           # echo "get the gpg key\n\n"
           # for i in {1..5}; do
           #     gpg --keyserver hkps://keyserver.ubuntu.com --recv-keys F23C5A6CF475977595C89F51BA6932366A755776 && break || sleep 10
           # done
 
-          # # Determine codename for Ubuntu version of container
-          # codename=$(cat /etc/lsb-release | grep "DISTRIB_CODENAME")
-          # codename=${codename#*=}
+          # Determine codename for Ubuntu version of container
+          codename=$(cat /etc/lsb-release | grep "DISTRIB_CODENAME")
+          codename=${codename#*=}
 
-          # # Get deadsnakes keyring
-          # apt-get install -y curl
-          # curl -fsSL https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x6A755776 | gpg --dearmor -o /usr/share/keyrings/deadsnakes-archive-keyring.gpg
-          # echo "deb [signed-by=/usr/share/keyrings/deadsnakes-archive-keyring.gpg] http://ppa.launchpad.net/deadsnakes/ppa/ubuntu $codename main" | tee /etc/apt/sources.list.d/deadsnakes-ppa.list
+          echo "Add deadsnakes ppa to sources.list\n\n"
+          cat <<EOF >> /etc/apt/source.list
+          deb https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu $codename main
+          deb-src https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu $codename main
+          EOF
 
-          # echo "add deadsnakes ppa\n\n"
-          # add-apt-repository ppa:deadsnakes/ppa -y
+          echo "add the gpg key\n\n"
+          apt-get install -y gnupg
+          apt-key adv --keyserver keyserver.ubuntu.com --recv-keys F23C5A6CF475977595C89F51BA6932366A755776
 
-          # echo "Add deadsnakes ppa to sources.list\n\n"
-          # cat <<EOF >> /etc/apt/source.list
-          # deb https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu $codename main
-          # deb-src https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu $codename main
-          # EOF
+          apt-get update
 
-          # echo "add the gpg key\n\n"
-          # apt-get install -y gnupg
-          # apt-key adv --keyserver keyserver.ubuntu.com --recv-keys F23C5A6CF475977595C89F51BA6932366A755776
-
-          # apt-get update
-
-          # echo "apt install python${{ matrix.python-version }}\n\n"
-          # apt install python${{ matrix.python-version }} -y
-          # echo "link python\n\n"
-          # ln -s /usr/bin/python${{ matrix.python-version }} /usr/bin/python
-          # echo "apt install python${{ matrix.python-version }}-venv\n\n"
-          # apt install python${{ matrix.python-version }}-venv -y
+          echo "apt install python${{ matrix.python-version }}\n\n"
+          apt install python${{ matrix.python-version }} -y
+          echo "link python\n\n"
+          ln -s /usr/bin/python${{ matrix.python-version }} /usr/bin/python
+          echo "apt install python${{ matrix.python-version }}-venv\n\n"
+          apt install python${{ matrix.python-version }}-venv -y
           echo "apt install lsb-release and more\n\n"
           apt install -y lsb-release mono-complete make git zip
 
