--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -165,7 +165,7 @@ jobs:
         uses: actions/checkout@v5
 
       - name: "Set up Python"
-        uses: ./github/workflows/setup-python/
+        uses: ./.github/workflows/setup-python/
         with:
           python-version: ${{ matrix.python-version }}
 
