add -y to apt install

--- a/.github/workflows/setup-python/action.yml
+++ b/.github/workflows/setup-python/action.yml
@@ -53,7 +53,7 @@ runs:
         apt update
 
         # Install dependencies to build Python
-        apt install build-essential zlib1g-dev libncurses5-dev libgdbm-dev libnss3-dev libssl-dev libreadline-dev libffi-dev libsqlite3-dev wget libbz2-dev
+        apt install build-essential zlib1g-dev libncurses5-dev libgdbm-dev libnss3-dev libssl-dev libreadline-dev libffi-dev libsqlite3-dev wget libbz2-dev -y
 
         # Download the specified Python version from python.org
         version=${{ env.PYTHON_VERSION_PATCH }}
