--- a/.github/workflows/setup-python/action.yml
+++ b/.github/workflows/setup-python/action.yml
@@ -21,6 +21,14 @@ inputs:
     type: string
     default: ""
 
+  enable-optimizations:
+    description: >
+      Whether to enable optimizations when building Python from source.
+      Defaults to true.
+    required: false
+    type: boolean
+    default: true
+
 runs:
   using: "composite"
   steps:
@@ -64,7 +72,13 @@ runs:
 
         # Check the required dependencies of the Python install
         cd Python-$version/
-        ./configure --enable-optimizations
+
+        if [ "${{ inputs.enable-optimizations }}" = true ]; then
+          optimization_flag="--enable-optimizations"
+        else
+          optimization_flag=""
+        fi
+        ./configure $optimizations_flag
 
         # Build Python
         make -j $(nproc)
